make a new rule bug squashed

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 .App {
   text-align: center;
   border: 1px solid grey;
-  background-color: rgb(50, 50, 50);
+  background-color: #1b1b1b;
   margin: auto;
   width: 1000px;
   height: 800px;
